# frinet

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  mem_usage.rs
crates/db/: Cargo.toml
crates/db/benches/: requests.rs
crates/db/src/: db.rs  flat.rs  irange.rs  lib.rs  matcher.rs  memory.rs  nearest_neighbor.rs  query.rs  register.rs  rtree.rs  search.rs
crates/fuzz/: Cargo.toml
crates/fuzz/fuzz_targets/: register_indexing.rs
crates/index/: Cargo.toml
crates/index/src/: disjoint.rs  hilbert_spec.rs  layout.rs  lib.rs  parser.rs  pass.rs  storage.rs
crates/index/src/parser/: tenet.rs
crates/index/src/pass/: fill.rs  hilbert_partition.rs  scout.rs
crates/python-bindings/: Cargo.toml
crates/python-bindings-stubgen/: Cargo.toml
crates/python-bindings-stubgen/src/: main.rs
crates/python-bindings/src/: lib.rs  registers.rs
crates/regex/: Cargo.toml
crates/regex/src/: automata.rs  determine.rs  hir_to_nfa.rs  lib.rs
crates/regex/tests/: match.rs
frontend/: arch.py  core.py  frinet_db.pyi  ida-plugin.json  memory_widget.py  plugin.py  register_widget.py  search_results_widget.py  timeline_widget.py
