[workspace]
members = [
    "crates/db",
    "crates/index",
    "crates/cli",
    "crates/fuzz",
    "crates/regex",
    "crates/python-bindings",
    "crates/python-bindings-stubgen",
]
resolver = "3"

[workspace.dependencies]
frinet-db = { path = "crates/db" }
frinet-index = { path = "crates/index" }
frinet-regex = { path = "crates/regex" }

# tenet trace format parser
memchr = "2.7.6"
hex = "0.4.3"

# indexing
fast_hilbert = "2.0.2"
smallvec = "1.15.1"
memmap2 = "0.9.8"
hashbrown = "0.16.0"
rustc-hash = "2.1.1"
log = "0.4.28"
zerocopy = "0.8.25"

# trace metadata
serde = "1.0.228"
serde_json = "1.0.149"

# regex search
regex-syntax = "0.8.5"
itertools = "0.14.0"
rayon = "1.11.0"

# cli
clap = "4.6.0"
indicatif = "0.18.4"
env_logger = "0.11.9"

# python bindings
pyo3 = "0.28.2"

# benchmark
criterion = { version = "0.8", features = ["html_reports", "csv_output"] }
rand = "0.10.0"
arbitrary = "1.4.1"

# testing
expect-test = "1.5.1"
