[package]
name = "frinet-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "frinet"
path = "src/main.rs"

[dependencies]
frinet-db = { workspace = true }
frinet-index = { workspace = true }

memmap2 = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
indicatif = { workspace = true }
clap = { workspace = true, features = ["derive"] }
