[package]
name = "frinet-index"
version = "0.1.0"
edition = "2024"

[dependencies]
frinet-db = { workspace = true }

zerocopy = { workspace = true }
hashbrown = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
fast_hilbert = { workspace = true }
memchr = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
