[package]
name = "frinet-python-bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "frinet_db"
crate-type = ["cdylib"]

[dependencies]
frinet-db = { workspace = true, features = ["pyo3"] }

memmap2 = { workspace = true }
pyo3 = { workspace = true, features = ["abi3-py37", "experimental-inspect"] }
